--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "test": "jest",
     "start": "node ./bin/www",
     "watch": "nodemon"
   },
@@ -13,7 +14,9 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "jest": "^29.3.1",
+    "morgan": "~1.9.1",
+    "supertest": "^6.3.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
